--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
                  // Create a temporary anchor element to trigger the download.
                  const link = document.createElement('a');
                  // Set the path to your PDF file.
-                 link.href = 'topmistakes.pdf'; 
+                 link.href = 'macshield.pdf'; 
                  // Set the download attribute to name the file for the user.
-                 link.download = 'topmistakes.pdf'; 
+                 link.download = 'macshield.pdf'; 
                  // Append to the document (required for Firefox).
                  document.body.appendChild(link); 
                  // Programmatically click the link to start the download.
